# hello-actix

./: .clippy.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  fly.toml  package-lock.json  package.json  rustfmt.toml  taplo.toml  tsconfig.json  typos.toml  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  quality.yml  tla-verification.yml
docs/: architecture.md  configuration.md  improvement_ideas.txt  model-code-sync.md  tla-walkthrough.md
public/: root.hbs
public/bundle/: manifest.json
public/bundle/assets/: index-CHCcHqfk.css
scripts/: bootstrap.sh
specs/: README.md  SessionModel.cfg  SessionModel.tla
src/: config.rs  inertia.rs  main.rs
src/handlers/: contact.rs  echo.rs  index.rs  login.rs  login_page.rs  logout.rs  logout_page.rs  mod.rs
www/: app.tsx  index.css  ssr.tsx
www/pages/: Contact.tsx  Index.tsx  Login.tsx  Logout.tsx
