[package]
edition = "2024"
name    = "hello-actix"
version = "0.1.0"

[dependencies]
actix-files = "0.6.9"
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = [
  "cookie-session",
  "redis-session",
  "redis-session-native-tls",
  "redis-pool",
] }
actix-web = "4"
base64 = "0.22"
chrono = "0.4.42"
config = { version = "0.15.19", features = ["yaml", "toml", "json", "ini"] }
dotenvy = "0.15"
env_logger = "0.11.9"
futures-util = "0.3.31"
inertia-rust = { version = "2.4.5", features = [
  "actix",
  "vite-hbs-template-resolver",
  "actix-validator",
] }
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20.0", features = ["derive"] }
vite-rust = "0.2.4"
